--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
-    "vue": "^3.3.8",
-    "vue-router": "^4.2.5",
+    "firebase": "^10.7.1",
+    "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
-    "firebase": "^10.7.1"
+    "vue": "^3.3.8",
+    "vue-leaflet": "^0.1.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
