--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "firebase": "^10.7.1",
     "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
